# HSE-AI-Assistant-Hack

./: .env.example  .gitignore  DuckDuckGo_LLaMA_70b.ipynb  README.md  catboost_jailbreak  main.py  pyproject.toml  setup_gigachat.sh
app/models/: base.py  catboost_jailbreak_inference.py  llms.py  pca_labse_from_768_to_32.pkl  ranker.py  retriever.py  yandexgpt.py
app/utils/: code_execute.py  dataset.py  entities.py  filters.py  metric.py  postcheck_regex.py  prompts.py  submit.py
data/jailbreaks/: jailbreaks_strings.txt  ood_print_samples.csv  ood_travel.csv
data/test/: merged.xlsx  merged_executed.xlsx  solutions.xlsx  tasks.xlsx  test.npy  tests.xlsx
data/train/: merged.xlsx  merged_executed.xlsx  merged_executed_test.xlsx  merged_executed_train.xlsx  merged_test.xlsx  merged_train.xlsx  solutions.xlsx  tasks.xlsx  tests.xlsx  train.npy
notebooks/: dataset.ipynb  gigachat.ipynb  gigachat_lite_baseline.ipynb  gigachat_pro_best_yandex.ipynb  ood_catboost.ipynb  rag.ipynb  rag_submission.ipynb  reranker.ipynb  yandexgpt.ipynb  yandexgpt_pro_baseline.ipynb
tests/: test_correctness.py  test_embedding_generation.py
